syntax="proto3";

package service;
option go_package="genproto/second_service";

import "google/protobuf/empty.proto";

service SecondService {
    // rpc Create(CreatePostRequest) returns (Post) {}
    rpc ListPosts(ListPostsRequest) returns (ListPostsResponse) {}
    rpc GetPost(GetPostRequest) returns (Post) {}
    rpc UpdatePost(UpdatePostRequest) returns (Result) {}
    rpc DeletePost(GetPostRequest) returns (Result) {}
}

message Post {
    int64 post_id = 1;
    int64 user_id = 2;
    string title = 3;
    string body = 4;
}

message ListPostsRequest {
    uint32 limit = 1;
    uint32 offset = 2;
    string search = 3;
}

message ListPostsResponse {
    repeated Post results = 1;
    uint32 count = 2;
}

message GetPostRequest {
    int64 post_id = 1;
}

message UpdatePostRequest {
    int64 post_id = 1;
    int64 user_id = 2;
    string title = 3;
    string body = 4;
}

message Result {
    string message = 1;
}